<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BankDetails">

    <TextView
        android:id="@+id/textEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/enter_your_name"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/idEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textEditName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:inputType="text"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textEditPersonalAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEditName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/enter_your_acc"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/idEditPersonalAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textEditPersonalAcc"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint=""
        android:inputType="number"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textBankName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEditPersonalAcc"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/enter_your_bankname"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/idEditBankName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textBankName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint=""
        android:inputType="text"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textBIC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEditBankName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/enter_your_bic"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/idEditBIC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textBIC"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint=""
        android:inputType="number"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textCorrespAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEditBIC"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/enter_your_correspAcc"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/idEditCorrespAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textCorrespAcc"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint=""
        android:inputType="number"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textKPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEditCorrespAcc"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/enter_your_kpp"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/idEditKPP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textKPP"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint=""
        android:inputType="number"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textPayeeINN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEditKPP"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/enter_your_payeeINN"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/idEditPayeeINN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPayeeINN"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint=""
        android:inputType="number"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textPinCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEditPayeeINN"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/pincode"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/PinCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPinCode"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:hint=""
        android:inputType="numberPassword"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/idBtnGenerateQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="SaveBankDetails"
            android:layout_marginRight="20dp"
            android:text="@string/save_bank_details" />

        <Button
            android:id="@+id/idBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="BankDetailsBack"
            android:text="@string/Back" />

    </LinearLayout>


</RelativeLayout>
