<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinCode">

    <Button
        android:id="@+id/idBackBtnPinCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:onClick="PinCodeBack"
        android:text="@string/Back" />

    <TextView
        android:id="@+id/textEntPinCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/idBackBtnPinCode"
        android:text="@string/enterpincode" />

    <EditText
        android:id="@+id/idEntPinCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textEntPinCode"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/idOkPinCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEntPinCode"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:onClick="PinCodeOk"
        android:text="@string/ok" />

</RelativeLayout>